internal/octogo/testdata/16_for_loops.ogo
func testForLoops() {
	var i int = 0
	var running bool = true

	// Valid: Single boolean condition
	for running {
		i = i + 1
		if i > 10 {
			running = false
		}
	}

	// ERROR "non-bool used as for condition|mismatched types"
	for i {
		i = i - 1
	}

	// Valid: Infinite loop (absent condition evaluates to true). A conditionless
	// "for" is a terminating statement -- there is no break, so "return" escapes
	// the whole function -- hence it must come last, or the code after it would be
	// unreachable.
	for {
		return
	}
}
